--- a/public/12-vac.html
+++ b/public/12-vac.html
@@ -71,6 +71,191 @@
 					<h1>Вакансии</h1>
 				</div>
 			</div>
+			<!-- start sVacAccardion-->
+			<div class="sVacAccardion section" id="sVacAccardion">
+				<div class="container">
+					<div class="dd-group dd-group-js">
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Арт-директор</h4><span>Открыть на&nbsp;HeadHunter</span>
+											<p>Мы&nbsp;ищем сильного арт-директора! Человека, который может самостоятельно генерить концепты, следить за&nbsp;их&nbsp;воплощением в&nbsp;жизнь, презентовать ...</p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
+									</li>
+									<li>
+										<p>Клиентоориентированность, самоорганизация и ответственность</p>
+									</li>
+									<li>
+										<p>Целеустремленность, способность самостоятельно принимать решения</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
+											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
+									</li>
+									<li>
+										<p>Клиентоориентированность, самоорганизация и ответственность</p>
+									</li>
+									<li>
+										<p>Целеустремленность, способность самостоятельно принимать решения</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Руководитель проектов</h4><span>Открыть на&nbsp;HeadHunter</span>
+											<p>Рассмотрим резюме всех супер-героев со&nbsp;следующими способностями:</p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
+									</li>
+									<li>
+										<p>Клиентоориентированность, самоорганизация и ответственность</p>
+									</li>
+									<li>
+										<p>Целеустремленность, способность самостоятельно принимать решения</p>
+									</li>
+									<li>
+										<p>Впечатляющие презентационные навыки </p>
+									</li>
+									<li>
+										<p>Стальные нервы</p>
+									</li>
+									<li>
+										<p>Активная жизненная позиция, коммуникабельность, оптимизм</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Копирайтер</h4><span>Открыть на&nbsp;HeadHunter</span>
+											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
+									</li>
+									<li>
+										<p>Клиентоориентированность, самоорганизация и ответственность</p>
+									</li>
+									<li>
+										<p>Целеустремленность, способность самостоятельно принимать решения</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
+											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Ассистент клиентского отдела</p>
+									</li>
+									<li>
+										<p>Клиентоориентированность, самоорганизация и ответственность</p>
+									</li>
+									<li>
+										<p>Целеустремленность, способность самостоятельно принимать решения</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="dd-group__item">
+							<div class="dd-group__head dd-head-js">
+								<div class="row">
+									<div class="col">
+										<div class="dd-group__wrraper">
+											<h4>Дизайнер-айдентист</h4><span>Открыть на&nbsp;HeadHunter</span>
+											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button></button>
+									</div>
+								</div>
+							</div>
+							<div class="dd-group__content dd-content-js">
+								<ul>
+									<li>
+										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
+									</li>
+									<li>
+										<p>Клиентоориентированность, самоорганизация и ответственность</p>
+									</li>
+									<li>
+										<p>Целеустремленность, способность самостоятельно принимать решения</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- end sVacAccardion-->
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
