--- a/public/12-vac.html
+++ b/public/12-vac.html
@@ -15,7 +15,7 @@
 		<div class="main-wrapper">
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
-				<div class="container">
+				<div class="container-fluid">
 					<div class="row">
 						<div class="col-auto">
 							<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
