--- a/public/12-vac.html
+++ b/public/12-vac.html
@@ -39,10 +39,11 @@
 								</div>
 								<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
 									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
-									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
 									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a></li>
 									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a></li>
+									<li class="menu-item" itemprop="item"><a href="#" itemprop="url">Eng</a></li>
 								</ul>
 							</div>
 						</div>
@@ -77,7 +78,7 @@
 					<div class="dd-group dd-group-js">
 						<div class="dd-group__item">
 							<div class="dd-group__head dd-head-js">
-								<div class="row">
+								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Арт-директор</h4><span>Открыть на&nbsp;HeadHunter</span>
@@ -105,7 +106,7 @@
 						</div>
 						<div class="dd-group__item">
 							<div class="dd-group__head dd-head-js">
-								<div class="row">
+								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
@@ -133,7 +134,7 @@
 						</div>
 						<div class="dd-group__item">
 							<div class="dd-group__head dd-head-js">
-								<div class="row">
+								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Руководитель проектов</h4><span>Открыть на&nbsp;HeadHunter</span>
@@ -170,7 +171,7 @@
 						</div>
 						<div class="dd-group__item">
 							<div class="dd-group__head dd-head-js">
-								<div class="row">
+								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Копирайтер</h4><span>Открыть на&nbsp;HeadHunter</span>
@@ -198,7 +199,7 @@
 						</div>
 						<div class="dd-group__item">
 							<div class="dd-group__head dd-head-js">
-								<div class="row">
+								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
@@ -226,7 +227,7 @@
 						</div>
 						<div class="dd-group__item">
 							<div class="dd-group__head dd-head-js">
-								<div class="row">
+								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
 											<h4>Дизайнер-айдентист</h4><span>Открыть на&nbsp;HeadHunter</span>
@@ -259,7 +260,7 @@
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col">
+						<div class="col-auto col-lg-2 col-logo">
 							<a class="logo-link" href="/"><svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g clip-path="url(#clip0_2312_2263)">
 <rect width="48" height="48" fill="#FFD747"/>
@@ -275,9 +276,48 @@
 </svg>
 							</a>
 						</div>
-						<div class="col"></div>
-						<div class="col"></div>
-						<div class="col-auto"></div>
+						<div class="col-12 col-lg-4 col-menu">
+							<ul class="footer__menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Услуги</a>
+								</li>
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Новости</a>
+								</li>
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">О компании</a>
+								</li>
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Портфолио</a>
+								</li>
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Контакты</a>
+								</li>
+								<li class="footer__menu-item" itemprop="item"><a href="#" itemprop="url">Eng</a>
+								</li>
+							</ul>
+						</div>
+						<div class="col-12 col-lg-3 col-btn">
+							<button class="footer__btn"> <img src="img/svg/download.svg" alt=""/><span>Скачать презентацию</span>
+							</button>
+						</div>
+						<div class="col-12 col-lg-3 col-adress">
+							<ul class="footer__adress">
+								<li><a href="#">Москва, ул. Земляной вал, д. 46, офис 41</a></li>
+								<li> <a href="mailto: info@ddvb.ru">info@ddvb.ru</a></li>
+								<li> <a href="tel: +74959160123">+7 (495) 916-01-23</a></li>
+							</ul>
+						</div>
+						<div class="col-12 col-lg-6 col-policy">
+							<a class="footer__policy" href="#">Политика конфиденциальности
+							</a>
+						</div>
+						<div class="col-auto col-copy">
+							<div class="footer__copyright">© 2021 ddvb
+							</div>
+						</div>
+						<div class="col-auto col-dev">
+							<a class="footer__developer" href="#">
+								<svg class="icon icon-coalla-logo ">
+									<use xlink:href="img/svg/sprite.svg#coalla-logo"></use>
+								</svg><span>Сделано в Coalla Agency</span>
+							</a>
+						</div>
 					</div>
 				</div>
 			</footer>
