--- a/public/index.html
+++ b/public/index.html
@@ -115,6 +115,8 @@
 									<use xlink:href="img/svg/sprite.svg#coalla-logo"></use>
 								</svg><span>Сделано в Coalla Agency</span>
 							</a>
+							<a class="footer__lang" href="#">Eng
+							</a>
 						</div>
 					</div>
 				</div>
