--- a/public/12-vac.html
+++ b/public/12-vac.html
@@ -317,6 +317,8 @@
 									<use xlink:href="img/svg/sprite.svg#coalla-logo"></use>
 								</svg><span>Сделано в Coalla Agency</span>
 							</a>
+							<a class="footer__lang" href="#">Eng
+							</a>
 						</div>
 					</div>
 				</div>
