--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,18 @@
 				</div>
 			</div>
 			<!-- end top-nav-->
+			<!-- start sNews-->
+			<section class="sNews section" id="sNews">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>sNews</h2>
+					</div>
+				</div>
+				<div class="container-wide">
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end sNews-->
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
