--- a/public/index.html
+++ b/public/index.html
@@ -57,13 +57,44 @@
 			<!-- end top-nav-->
 			<!-- start sNews-->
 			<section class="sNews section" id="sNews">
-				<div class="container">
-					<div class="section-title text-center">
-						<h2>sNews</h2>
-					</div>
-				</div>
 				<div class="container-wide">
-					<div class="row"></div>
+					<div class="section-title">
+						<h2>Новости и&nbsp;события</h2>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="news-item">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif" media="(min-width:576px)"/>
+									<source type="image/avif" srcset="img/@1x/avif/sNews-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp" media="(min-width:576px)"/>
+									<source type="image/webp" srcset="img/@1x/webp/sNews-1.webp"/>
+									<source type="image/jpg" srcset="img/@2x/avif/sNews-1.jpg" media="(min-width:576px)"/>
+									<source type="image/jpg" srcset="img/@1x/avif/sNews-1.jpg"/><img src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</h3>
+								<div class="text-secondary-light">21 января</div>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="news-item">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-2.avif" media="(min-width:576px)"/>
+									<source type="image/avif" srcset="img/@1x/avif/sNews-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-2.webp" media="(min-width:576px)"/>
+									<source type="image/webp" srcset="img/@1x/webp/sNews-2.webp"/>
+									<source type="image/jpg" srcset="img/@2x/avif/sNews-2.jpg" media="(min-width:576px)"/>
+									<source type="image/jpg" srcset="img/@1x/avif/sNews-2.jpg"/><img src="img/@2x/sNews-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Леонид Фейгин о&nbsp;новом логотипе ZARA</h3>
+								<div class="text-secondary-light">21 января</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- end sNews-->
