--- a/public/index.html
+++ b/public/index.html
@@ -63,37 +63,33 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6">
-							<div class="news-item">
+							<a class="news-item" href="#">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/sNews-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/sNews-1.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/sNews-1.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/sNews-1.jpg"/><img src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 								<h3>Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</h3>
-								<div class="text-secondary-light">21 января</div>
-							</div>
+								<div class="news-item__date">21 января
+								</div>
+							</a>
 						</div>
 						<div class="col-md-6">
-							<div class="news-item">
+							<a class="news-item" href="#">
 								<!-- picture-->
 								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/sNews-2.avif" media="(min-width:576px)"/>
-									<source type="image/avif" srcset="img/@1x/avif/sNews-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/sNews-2.webp" media="(min-width:576px)"/>
-									<source type="image/webp" srcset="img/@1x/webp/sNews-2.webp"/>
-									<source type="image/jpg" srcset="img/@2x/avif/sNews-2.jpg" media="(min-width:576px)"/>
-									<source type="image/jpg" srcset="img/@1x/avif/sNews-2.jpg"/><img src="img/@2x/sNews-2.jpg" alt="" loading="lazy"/>
+									<source type="image/avif" srcset="img/@2x/avif/sNews-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-2.webp"/><img class="object-fit-js" src="img/@2x/sNews-2.jpg" alt="" loading="lazy"/>
 								</picture>
 								<!-- /picture-->
 								<h3>Леонид Фейгин о&nbsp;новом логотипе ZARA</h3>
-								<div class="text-secondary-light">21 января</div>
-							</div>
+								<div class="news-item__date">21 января
+								</div>
+							</a>
 						</div>
+					</div>
+					<div class="sNews__btn btn btn-primary">Все работы 
 					</div>
 				</div>
 			</section>
