--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,11 @@
 							</a>
 						</div>
 					</div>
-					<div class="sNews__btn btn btn-primary">Все работы 
-					</div>
+					<a class="sNews__btn btn btn-more" href="#">
+						<svg class="icon icon-chevron-right-btn ">
+							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+						</svg><span>Ещё новости</span>
+					</a>
 				</div>
 			</section>
 			<!-- end sNews-->
