--- a/public/index.html
+++ b/public/index.html
@@ -89,11 +89,11 @@
 							</a>
 						</div>
 					</div>
-					<a class="sNews__btn btn btn-more" href="#">
+					<div class="btn-more" href="#">
 						<svg class="icon icon-chevron-right-btn ">
 							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
 						</svg><span>Ещё новости</span>
-					</a>
+					</div>
 				</div>
 			</section>
 			<!-- end sNews-->
