17-news.html done

--- a/public/17-news.html
+++ b/public/17-news.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Вакансии</title>
+		<title>Новости</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -11,7 +11,7 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body class="main-page" data-bg="12-1-About-company-work.png">
+	<body>
 		<div class="main-wrapper">
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
@@ -57,206 +57,199 @@
 			<!-- end top-nav-->
 			<div class="page-head"> 
 				<div class="container">
-					<div class="breadcrumb-wrap">
-						<nav class="bread-slider-js swiper" aria-label="breadcrumb">
-							<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-								<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
-										<meta itemprop="position" content="1"/></a></li>
-								<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">О компании</span>
-										<meta itemprop="position" content="2"/></a></li>
-								<li class="breadcrumb-item swiper-slide active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Вакансии</span>
-										<meta itemprop="position" content="3"/></a></li>
-							</ol>
-						</nav>
-					</div>
-					<h1>Вакансии</h1>
+					<h1>Новости</h1>
 				</div>
 			</div>
-			<!-- start sVacAccardion-->
-			<div class="sVacAccardion section" id="sVacAccardion">
-				<div class="container">
-					<div class="dd-group dd-group-js">
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Арт-директор</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Мы&nbsp;ищем сильного арт-директора! Человека, который может самостоятельно генерить концепты, следить за&nbsp;их&nbsp;воплощением в&nbsp;жизнь, презентовать ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
+			<!-- start sNews-->
+			<div class="sNews section sNews sNews--full" id="sNews">
+				<div class="container-wide">
+					<div class="row">
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</h3>
+								<div class="news-item__date">21&nbsp;января
 								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
+							</a>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-3.webp"/><img class="object-fit-js" src="img/@2x/sNews-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Фейгин: Интервью для Wordshop</h3>
+								<div class="news-item__date">30&nbsp;сентября 2020
 								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
+							</a>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Руководитель проектов</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Рассмотрим резюме всех супер-героев со&nbsp;следующими способностями:</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-4.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-4.webp"/><img class="object-fit-js" src="img/@2x/sNews-4.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</h3>
+								<div class="news-item__date">21&nbsp;января
 								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-									<li>
-										<p>Впечатляющие презентационные навыки </p>
-									</li>
-									<li>
-										<p>Стальные нервы</p>
-									</li>
-									<li>
-										<p>Активная жизненная позиция, коммуникабельность, оптимизм</p>
-									</li>
-								</ul>
-							</div>
+							</a>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Копирайтер</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-5.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-5.webp"/><img class="object-fit-js" src="img/@2x/sNews-5.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</h3>
+								<div class="news-item__date">21&nbsp;января
 								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
+							</a>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-6.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-6.webp"/><img class="object-fit-js" src="img/@2x/sNews-6.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Время побеждать: сразу три наших работы получили серебро на&nbsp;&laquo;Серебряном Меркурии&raquo;</h3>
+								<div class="news-item__date">21&nbsp;января
 								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Ассистент клиентского отдела</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
+							</a>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Дизайнер-айдентист</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-7.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-7.webp"/><img class="object-fit-js" src="img/@2x/sNews-7.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Дмитрий Пёрышков выступил на&nbsp;Russian Creativity Week</h3>
+								<div class="news-item__date">21 января
 								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-8.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-8.webp"/><img class="object-fit-js" src="img/@2x/sNews-8.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</h3>
+								<div class="news-item__date">21&nbsp;января
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-9.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-9.webp"/><img class="object-fit-js" src="img/@2x/sNews-9.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</h3>
+								<div class="news-item__date">21&nbsp;января
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-10.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-10.webp"/><img class="object-fit-js" src="img/@2x/sNews-10.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Создание легенды брендаСоздание легенды бренда</h3>
+								<div class="news-item__date">21&nbsp;января
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-11.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-11.webp"/><img class="object-fit-js" src="img/@2x/sNews-11.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Фейгин: Интервью для Wordshop</h3>
+								<div class="news-item__date">30&nbsp;сентября 2020
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-12.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-12.webp"/><img class="object-fit-js" src="img/@2x/sNews-12.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Проект студенческой команды НИУ ВШЭ под менторством Дмитрия Пёрышкова одержал победу</h3>
+								<div class="news-item__date">21&nbsp;января
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-5.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-5.webp"/><img class="object-fit-js" src="img/@2x/sNews-5.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Компания DDVB вошла в&nbsp;ТОП-5 рейтинга по&nbsp;маркетинговому консалтингу</h3>
+								<div class="news-item__date">21&nbsp;января
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-1.webp"/><img class="object-fit-js" src="img/@2x/sNews-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Дмитрий Пёрышков в&nbsp;жюри премии WOW Awards</h3>
+								<div class="news-item__date">21&nbsp;января
+								</div>
+							</a>
+						</div>
+						<div class="col-md-6">
+							<a class="news-item" href="#">
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/sNews-7.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/sNews-7.webp"/><img class="object-fit-js" src="img/@2x/sNews-7.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+								<h3>Дмитрий Пёрышков выступил на&nbsp;Russian Creativity Week</h3>
+								<div class="news-item__date">12&nbsp;сентября 2020
+								</div>
+							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- end sVacAccardion-->
+			<!-- end sNews-->
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
