--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,10 @@
 			</div>
 			<!-- end top-nav-->
 			<!-- start sNews-->
-			<section class="sNews section" id="sNews">
+			<div class="sNews section" id="sNews">
 				<div class="container-wide">
 					<div class="section-title">
-						<h2>Новости и&nbsp;события</h2>
+						<h2>Новости и события</h2>
 					</div>
 					<div class="row">
 						<div class="col-md-6">
@@ -95,7 +95,7 @@
 						</svg><span>Ещё новости</span>
 					</div>
 				</div>
-			</section>
+			</div>
 			<!-- end sNews-->
 			<footer class="footer">
 				<div class="container">
@@ -164,7 +164,7 @@
 				</div>
 			</footer>
 		</div>
-		<!--  start modals--><a class="link-modal-js" href="modal-call">modal-call </a>
+		<!--  start modals-->
 		<div id="modal-call" style="display: none">
 			<div class="modal-win">
 				<div class="form-wrap">
