--- a/public/03-Service.html
+++ b/public/03-Service.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Вакансии</title>
+		<title>Услуги</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -11,7 +11,7 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body class="main-page" data-bg="12-1-About-company-work.png">
+	<body class="main-page" data-bg="3-1-Service.jpg">
 		<div class="main-wrapper">
 			<!-- start top-nav-->
 			<div class="top-nav block-with-lazy">
@@ -57,206 +57,69 @@
 			<!-- end top-nav-->
 			<div class="page-head"> 
 				<div class="container">
-					<div class="breadcrumb-wrap">
-						<nav class="bread-slider-js swiper" aria-label="breadcrumb">
-							<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-								<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
-										<meta itemprop="position" content="1"/></a></li>
-								<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">О компании</span>
-										<meta itemprop="position" content="2"/></a></li>
-								<li class="breadcrumb-item swiper-slide active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Вакансии</span>
-										<meta itemprop="position" content="3"/></a></li>
-							</ol>
-						</nav>
-					</div>
-					<h1>Вакансии</h1>
+					<h1>Услуги</h1>
 				</div>
 			</div>
-			<!-- start sVacAccardion-->
-			<div class="sVacAccardion section" id="sVacAccardion">
+			<!-- start sServiceHead-->
+			<div class="sServiceHead section" id="sServiceHead">
 				<div class="container">
-					<div class="dd-group dd-group-js">
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Арт-директор</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Мы&nbsp;ищем сильного арт-директора! Человека, который может самостоятельно генерить концепты, следить за&nbsp;их&nbsp;воплощением в&nbsp;жизнь, презентовать ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
-								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
+					<p class="sServiceHead__text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
+					</p>
+					<div class="row">
+						<div class="col">
+							<ul>
+								<li>
+									<button class="sServiceHead__btn">Все услуги
+									</button>
+								</li>
+								<li>
+									<button class="sServiceHead__btn">Потребительский брендинг
+									</button>
+								</li>
+								<li>
+									<button class="sServiceHead__btn">Корпоративный брендинг
+									</button>
+								</li>
+								<li>
+									<button class="sServiceHead__btn active">Стратегия
+									</button>
+								</li>
+								<li>
+									<button class="sServiceHead__btn">Продвижение
+									</button>
+								</li>
+							</ul>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
+						<div class="col-12">
+							<div class="dd-group dd-group-js">
+								<div class="dd-group__item">
+									<div class="dd-group__head dd-head-js">
+										<div class="dd-group__row row">
+											<div class="col">
+												<div class="dd-group__wrraper">
+													<h4>Стратегия</h4>
+													<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает</p>
+												</div>
+											</div>
+											<div class="col-auto">
+												<button></button>
+											</div>
 										</div>
 									</div>
-									<div class="col-auto">
-										<button></button>
+									<div class="dd-group__content dd-content-js">
 									</div>
 								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Руководитель проектов</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Рассмотрим резюме всех супер-героев со&nbsp;следующими способностями:</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
-								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-									<li>
-										<p>Впечатляющие презентационные навыки </p>
-									</li>
-									<li>
-										<p>Стальные нервы</p>
-									</li>
-									<li>
-										<p>Активная жизненная позиция, коммуникабельность, оптимизм</p>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Копирайтер</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
-								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Менеджер в отдел развития</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
-								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Ассистент клиентского отдела</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
-							</div>
-						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
-								<div class="dd-group__row row">
-									<div class="col">
-										<div class="dd-group__wrraper">
-											<h4>Дизайнер-айдентист</h4><span>Открыть на&nbsp;HeadHunter</span>
-											<p>Кто не&nbsp;боится огня, воды и&nbsp;медных труб. Вам предстоит работать с&nbsp;новыми клиентами, полностью вести клиентов от&nbsp;первого контакта до&nbsp;момента ...</p>
-										</div>
-									</div>
-									<div class="col-auto">
-										<button></button>
-									</div>
-								</div>
-							</div>
-							<div class="dd-group__content dd-content-js">
-								<ul>
-									<li>
-										<p>Опыт работы с супер-клиентами и ведения супер-проектов</p>
-									</li>
-									<li>
-										<p>Клиентоориентированность, самоорганизация и ответственность</p>
-									</li>
-									<li>
-										<p>Целеустремленность, способность самостоятельно принимать решения</p>
-									</li>
-								</ul>
 							</div>
 						</div>
 					</div>
+					<a class="sServiceHead__download" href="#">
+						<svg class="icon icon-doc-download ">
+							<use xlink:href="img/svg/sprite.svg#doc-download"></use>
+						</svg><span>Скачать презентацию (PDF)</span>
+					</a>
 				</div>
 			</div>
-			<!-- end sVacAccardion-->
+			<!-- end sServiceHead-->
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
