--- a/public/13-contacts.html
+++ b/public/13-contacts.html
@@ -81,7 +81,7 @@
 				<div class="container">
 					<div class="row"> 
 						<div class="col-lg-6">
-							<ul class="contacts">
+							<ul>
 								<li>
 									<svg class="icon icon-map-marker ">
 										<use xlink:href="img/svg/sprite.svg#map-marker"></use>
@@ -191,7 +191,7 @@
 						</div>
 						<div class="col-12 col-lg-3 col-adress">
 							<ul class="footer__adress">
-								<li><a href="#">Москва, ул. Земляной вал, д. 46, офис 41</a></li>
+								<li><span>Москва, ул. Земляной вал, д. 46, офис 41</span></li>
 								<li> <a href="mailto: info@ddvb.ru">info@ddvb.ru</a></li>
 								<li> <a href="tel: +74959160123">+7 (495) 916-01-23</a></li>
 							</ul>
