--- a/public/03-Service.html
+++ b/public/03-Service.html
@@ -112,7 +112,7 @@
 							</div>
 						</div>
 					</div>
-					<a class="sServiceHead__download" href="#">
+					<a class="download-link" href="#">
 						<svg class="icon icon-doc-download ">
 							<use xlink:href="img/svg/sprite.svg#doc-download"></use>
 						</svg><span>Скачать презентацию (PDF)</span>
@@ -120,6 +120,58 @@
 				</div>
 			</div>
 			<!-- end sServiceHead-->
+			<!-- start sCard-->
+			<div class="sCard section" id="sCard">
+				<div class="container-wide">
+					<div class="row">
+						<div class="col-md-12">
+							<div class="cardWrrap cardWrrap--horizontal text-lg-white">
+								<div class="cardWrrap__content">
+									<h2>Выбери цвет настроения!</h2><span>Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-1.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-1.webp"/><img class="object-fit-js" src="img/@2x/card-bg-1.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6"> 
+							<div class="cardWrrap text-lg-white">
+								<div class="cardWrrap__content">
+									<h2>Еще один проект для любимого бренда</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-2.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-2.webp"/><img class="object-fit-js" src="img/@2x/card-bg-2.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="cardWrrap">
+								<div class="cardWrrap__content">
+									<h2>Ничего лишнего</h2><span>Продвижение, Стратегия</span>
+								</div>
+								<!-- picture-->
+								<picture> 
+									<source type="image/avif" srcset="img/@2x/avif/card-bg-3.avif"/>
+									<source type="image/webp" srcset="img/@2x/webp/card-bg-3.webp"/><img class="object-fit-js" src="img/@2x/card-bg-3.jpg" alt="" loading="lazy"/>
+								</picture>
+								<!-- /picture-->
+							</div>
+						</div>
+					</div>
+					<div class="btn-more" href="#">
+						<svg class="icon icon-chevron-right-btn ">
+							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+						</svg><span>Портфолио по стратегии</span>
+					</div>
+				</div>
+			</div>
+			<!-- end sCard-->
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
