--- a/public/03-Service.html
+++ b/public/03-Service.html
@@ -67,24 +67,24 @@
 					</p>
 					<div class="row">
 						<div class="col">
-							<ul>
-								<li>
+							<ul class="sServiceHead__list">
+								<li class="sServiceHead__item">
 									<button class="sServiceHead__btn">Все услуги
 									</button>
 								</li>
-								<li>
+								<li class="sServiceHead__item">
 									<button class="sServiceHead__btn">Потребительский брендинг
 									</button>
 								</li>
-								<li>
+								<li class="sServiceHead__item">
 									<button class="sServiceHead__btn">Корпоративный брендинг
 									</button>
 								</li>
-								<li>
+								<li class="sServiceHead__item">
 									<button class="sServiceHead__btn active">Стратегия
 									</button>
 								</li>
-								<li>
+								<li class="sServiceHead__item">
 									<button class="sServiceHead__btn">Продвижение
 									</button>
 								</li>
@@ -98,7 +98,7 @@
 											<div class="col">
 												<div class="dd-group__wrraper">
 													<h4>Стратегия</h4>
-													<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает</p>
+													<p>Мы&nbsp;уверены, что именно смысл является истинным преимуществом сильного бренда. А&nbsp;смыслы рождаются в&nbsp;сознании людей. Наш подход&nbsp;HX (human experience), сфокусированный на&nbsp;человеческих потребностях, эмоциях и&nbsp;восприятиях, обеспечивает взаимопонимание между бизнесом и&nbsp;потребителем. Используя методики социальной психологии и&nbsp;личностный анализ, мы&nbsp;формируем ценностное предложение, которое в&nbsp;дальнейшем ложится в&nbsp;основу вербальных и&nbsp;визуальных коммуникаций, помогая бизнесу вести с&nbsp;людьми взаимовыгодный и&nbsp;результативный диалог.</p>
 												</div>
 											</div>
 											<div class="col-auto">
@@ -107,6 +107,83 @@
 										</div>
 									</div>
 									<div class="dd-group__content dd-content-js">
+										<div class="content-wrrap"> 
+											<div class="row">
+												<div class="col-lg-6"> 
+													<p>Собираем и анализируем информацию</p>
+												</div>
+												<div class="col-lg-6">
+													<ul> 
+														<li>
+															<p>Аудит бренда</p>
+														</li>
+														<li>
+															<p>Глубинные и экспертные интервью</p>
+														</li>
+														<li>
+															<p>Кабинетные исследования</p>
+														</li>
+														<li>
+															<p>Внешние исследования (супервайзинг)</p>
+														</li>
+														<li>
+															<p>Стратегические сессии и воркшопы</p>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+										<div class="content-wrrap"> 
+											<div class="row">
+												<div class="col-lg-6"> 
+													<p>Формируем смысловое наполнение</p>
+												</div>
+												<div class="col-lg-6">
+													<ul> 
+														<li>
+															<p>Позиционирование</p>
+														</li>
+														<li>
+															<p>Платформа бренда</p>
+														</li>
+														<li>
+															<p>EVP HR бренда (с принципами корпоративной культуры)</p>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+										<div class="content-wrrap"> 
+											<div class="row">
+												<div class="col-lg-6"> 
+													<p>Создаём структуру</p>
+												</div>
+												<div class="col-lg-6">
+													<ul> 
+														<li>
+															<p>Бренд–архитектура</p>
+														</li>
+														<li>
+															<p>Ассортиментная матрица</p>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
+										<div class="content-wrrap"> 
+											<div class="row">
+												<div class="col-lg-6"> 
+													<p>Формируем принципы общения с аудиторией</p>
+												</div>
+												<div class="col-lg-6">
+													<ul> 
+														<li>
+															<p>Коммуникационная стратегия</p>
+														</li>
+													</ul>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
